[package]
name = "bcproject"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.38", features = ["full"] }
clap = { version = "4.5.6", features = ["derive"] }
futures = { version = "0.3.30" }
libp2p = { version = "0.55.0", features = [
    "tokio", 
    "cbor", 
    "dns", 
    "kad", 
    "noise", 
    "macros", 
    "request-response", 
    "tcp",
    "gossipsub", 
    "websocket", 
    "yamux", 
    "mdns"
] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
sha2 = "0.10.8"
log = "0.4"
rust-crypto = "0.2.36"
failure = "0.1.8"
serde_json = "1.0.139"
sled = "0.34.7"
data-encoding = "2.8.0"
num-bigint = "0.4.6"
ring = "0.17.10"
tracing = "0.1.44"

